--- a/www/app/main/main.css
+++ b/www/app/main/main.css
@@ -90,6 +90,7 @@ md-sidenav.md-closed.md-locked-open-add-active {
 .box-shadow-menu {
   position: relative;
   padding-left: 1.25em;
+  font-size:150%;
 }
 .box-shadow-menu:before {
   content: "";
